tests/src/frontend/syntax/invalid/guard_instead_of_when.sk
fun test(): void {
  1 match {
  | x guard (x == 1) -> "Nope\n"
  | x -> "Boom\n"
  }
}

